package oop10;

public interface Scalable {

    Integer PCT_200 = 2;

    void grow(int dr);

    double getArea();

    double getPerimeter();

}
